<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/alpha_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="alpha"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/alpha_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="透明渐变"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/alpha_btn"/>


    <Button
        android:id="@+id/rotate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="rotate"
        app:layout_constraintTop_toBottomOf="@id/alpha_btn"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/rotate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="旋转"
        app:layout_constraintTop_toBottomOf="@id/alpha_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/rotate_btn"/>

    <Button
        android:id="@+id/scale_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="scale"
        app:layout_constraintTop_toBottomOf="@id/rotate_btn"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/scale_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="缩放"
        app:layout_constraintTop_toBottomOf="@id/rotate_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/scale_btn"/>

    <Button
        android:id="@+id/translate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="translate"
        app:layout_constraintTop_toBottomOf="@id/scale_btn"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/translate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="平移"
        app:layout_constraintTop_toBottomOf="@id/scale_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/translate_btn"/>

    <Button
        android:id="@+id/start_anim_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="开启帧动画"
        app:layout_constraintTop_toBottomOf="@+id/translate_btn"/>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/start_anim_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/dump"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="dump"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>