<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/ObjectAnimator_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ObjectAnimator"
        app:layout_constraintTop_toBottomOf="@+id/iv"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/valueAnimator_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="valueAnimator"
        app:layout_constraintTop_toBottomOf="@+id/ObjectAnimator_btn"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/Interpolator_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Interpolator"
        app:layout_constraintTop_toBottomOf="@+id/valueAnimator_btn"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/TypeEvaluator_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TypeEvaluator"
        app:layout_constraintTop_toBottomOf="@+id/Interpolator_btn"
        android:layout_marginTop="22dp"/>
</android.support.constraint.ConstraintLayout>